# forge_os

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/forge-cli/: Cargo.toml
apps/forge-cli/src/: bundle.rs  client.rs  main.rs  render.rs
apps/forge-cli/src/cmd/: chat.rs  events.rs  health.rs  missions.rs  mod.rs  skill.rs
apps/forge-cli/tests/: end_to_end.rs
apps/forge-desktop/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/forge-desktop/frontend/src/: App.tsx  index.css  main.tsx
apps/forge-desktop/frontend/src/components/ui/: primitives.tsx
apps/forge-desktop/frontend/src/lib/: event-filter.ts  events.ts  ipc.ts  utils.ts
apps/forge-desktop/frontend/src/stores/: events.ts  ui.ts
apps/forge-desktop/frontend/src/views/: CreateMission.tsx  EventTimeline.tsx  MissionDagView.tsx  MissionList.tsx  Settings.tsx
apps/forge-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/forge-desktop/src-tauri/capabilities/: default.json
apps/forge-desktop/src-tauri/src/: lib.rs  main.rs
apps/forge-gateway/: Cargo.toml
apps/forge-gateway/src/: main.rs
apps/forge-vscode/: README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
apps/forge-vscode/src/: extension.ts
config/: mcp.default.yaml  policy.default.yaml
config/skills/active/: aws.md  code-review.md  database-migration.md  docker.md  documentation.md  git-repo.md  github-cli.md  go-module.md  incident-response.md  kubernetes.md  node-project.md  postgres.md  python-project.md  react-app.md  redis.md  refactoring.md  release-management.md  rust-crate.md  security-review.md  terraform.md
crates/forge-domain/: Cargo.toml
crates/forge-domain/src/: event.rs  goal.rs  ids.rs  lib.rs  mission.rs  policy.rs  task.rs  tool.rs
crates/forge-events/: Cargo.toml
crates/forge-events/src/: lib.rs
crates/forge-execution/: Cargo.toml
crates/forge-execution/src/: lib.rs
crates/forge-llm/: Cargo.toml
crates/forge-llm/src/: anthropic.rs  azure_openai.rs  embed_ollama.rs  embed_openai.rs  gemini.rs  groq.rs  lib.rs  mock.rs  ollama.rs  openai.rs  openrouter.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/examples/: mock_mcp_server.rs
crates/forge-mcp/src/: adapter.rs  client.rs  config.rs  lib.rs  protocol.rs  registry.rs  transport.rs
crates/forge-mcp/tests/: stdio_roundtrip.rs
crates/forge-mission/: Cargo.toml
crates/forge-mission/src/: lib.rs
crates/forge-mission/tests/: end_to_end.rs
crates/forge-persistence/: Cargo.toml
crates/forge-persistence/src/: lib.rs  migrations.rs  postgres.rs  sqlite.rs
crates/forge-planner/: Cargo.toml
crates/forge-planner/src/: lib.rs  reflector.rs
crates/forge-policy/: Cargo.toml
crates/forge-policy/src/: lib.rs
crates/forge-runtime/: Cargo.toml
crates/forge-runtime/examples/: checkpoints_headless_smoke.rs  checkpoints_smoke.rs  cost_summary_smoke.rs  episodic_recall_smoke.rs  materialize_smoke.rs  org_memory_smoke.rs  postgres_dispatch_smoke.rs  skill_curator_smoke.rs  skill_validation_smoke.rs  skill_versioning_smoke.rs  user_memory_smoke.rs  worker_pool_smoke.rs
crates/forge-runtime/src/: audit.rs  checkpoints.rs  episodic_recall.rs  feature_flags.rs  lib.rs  memory.rs  secrets.rs  skills_ops.rs  user_memory.rs  worker_pool.rs
crates/forge-server/: Cargo.toml
crates/forge-server/examples/: api_smoke.rs
crates/forge-server/src/: lib.rs  openai_compat.rs
crates/forge-skills/: Cargo.toml
crates/forge-skills/examples/: approve.rs
crates/forge-skills/src/: format.rs  lib.rs  loader.rs  proposal.rs  registry.rs  similarity.rs  validate.rs  versions.rs
crates/forge-skills/tests/: seed_skills.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: builtins.rs  lib.rs
docs/: ARCHITECTURE.md  BUILD_LOG.md  DIAGRAMS.md  IDEATION.md  MCP.md  ROADMAP.md  SKILLS.md  TEST_SUITE.md
scripts/: check_checkpoints.py  dump_events.py  forge-inspect.py  inspect_tools.py  install-macos.sh  install-windows.ps1  list_tools.py
