[package]
name        = "forge-cli"
description = "Headless CLI for driving Forge OS over its HTTP API."
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# Reuse the domain types so we deserialize server responses into strongly-typed values.
forge-domain     = { workspace = true }

clap             = { workspace = true }
tokio            = { workspace = true }
reqwest          = { workspace = true, features = ["json", "stream", "rustls-tls"] }
serde            = { workspace = true }
serde_json       = { workspace = true }
anyhow           = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
time             = { workspace = true }
futures          = { workspace = true }
tokio-stream     = { workspace = true }
eventsource-stream = { workspace = true }

# Signed skill bundles.
ed25519-dalek    = { workspace = true }
rand_core        = { workspace = true }
base64           = { workspace = true }
sha2             = { workspace = true }
hex              = { workspace = true }
serde_yaml       = { workspace = true }
walkdir          = { workspace = true }
directories      = { workspace = true }

[dev-dependencies]
tempfile         = { workspace = true }
forge-runtime    = { workspace = true }
forge-server     = { workspace = true }
