[package]
name        = "forge-domain"
description = "Pure domain types for Forge OS: Mission, Goal, Task, events, state machines. No I/O."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
thiserror   = { workspace = true }
