[package]
name = "forge-events"
description = "Event sourcing spine for Forge OS: in-process broadcast bus + append-only SQLite store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain      = { workspace = true }
forge-persistence = { workspace = true }
tokio             = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
time              = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
parking_lot       = { workspace = true }
