[package]
name = "forge-execution"
description = "Tokio-based execution engine: walks a goal DAG, enforces policy, runs tools, emits events."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain      = { workspace = true }
forge-events      = { workspace = true }
forge-persistence = { workspace = true }
forge-tools       = { workspace = true }
forge-policy      = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
dashmap           = { workspace = true }
