[package]
name = "forge-llm"
description = "LLM router: provider trait, OpenRouter + Ollama + Mock adapters, fallback/health routing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
dashmap      = { workspace = true }
time         = { workspace = true }
parking_lot  = { workspace = true }
