[package]
name = "forge-mcp"
description = "Model Context Protocol (MCP) client for Forge OS: spawn MCP servers, adapt their tools to the forge Tool registry."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain = { workspace = true }
forge-tools  = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
dashmap      = { workspace = true }
futures      = { workspace = true }

[dev-dependencies]
tokio        = { workspace = true, features = ["full", "test-util", "macros"] }
