[package]
name = "forge-mission"
description = "Mission facade: create/plan/run/cancel missions. Wraps planner + execution."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain      = { workspace = true }
forge-events      = { workspace = true }
forge-llm         = { workspace = true }
forge-persistence = { workspace = true }
forge-planner     = { workspace = true }
forge-execution   = { workspace = true }
forge-skills      = { workspace = true }
forge-tools       = { workspace = true }
tokio             = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
forge-policy      = { workspace = true }
tempfile          = "3"
tracing-subscriber= { workspace = true }
