[package]
name = "forge-persistence"
description = "SQLite-backed persistence for Forge OS: migrations, repositories, event store."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
time         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
sqlx         = { workspace = true }
