[package]
name = "forge-policy"
description = "Declarative policy engine: YAML rules -> Allow / Deny / RequireApproval decisions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
