[package]
name = "forge-tools"
description = "Tool runtime for Forge OS: Tool trait + built-in filesystem/shell/search tools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
forge-domain = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
dunce        = "1"
